--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Nongshim" />
-    <meta property="og:url" content="http://hong404.dothome.co.kr/nongshim" />
-    <meta property="og:image" content="http://hong404.dothome.co.kr/nongshim/images/main_intro.png" />
+    <meta property="og:url" content="https://h-joha.github.io/nongshim" />
+    <meta property="og:image" content="https://h-joha.github.io/nongshim/images/main_intro.png" />
     <meta property="og:description" content="농심은 창립 이후 50여 년 동안 한국의 식문화를 이끌어온 식품전문기업입니다." />
     <title>농심</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico?v=1" />
